# Console

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: advanced_console_example.cc  logtimes_example.cc  test.h  test_term_color.sh
inc/: Browse.h  Console.h  LogTimes.h  Profiler.h  TerminalCommads.h
lib/cmake/: ConsoleConfig.cmake
src/: Browse.cc  Console.cc  LogTimes.cc  Profiler.cc
test/: test.h  test_browse.cc  test_console.cc  test_console_operator.cc  test_logtimes.cc  test_profiler.cc
test/test_install/: CMakeLists.txt  test_install.cc
